<resources>
    <string name="app_name">畅速快递</string>

    <!--网络相关-->
    <string name="no_data">暂无数据</string>
    <string name="net_error">加载失败</string>
    <string name="yes">是</string>

    <!--about login -->
    <string name="phone_number">手机号码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="find_back_password">找回密码</string>
    <string name="reset_password">重设密码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="verify_code">验证码</string>
    <string name="next_step">下一步</string>
    <string name="input_password">输入密码</string>
    <string name="confirm_password">请再次输入密码</string>
    <string name="confirm">确认</string>
    <string name="get_verify_again">重新获取 %d</string>

    <!--punch 打卡-->
    <string name="punch">打卡</string>
    <string name="punch_card">上班打卡</string>
    <string name="punch_card_time">上班打卡时间</string>
    <string name="punch_card_time_and_loc">上班打卡记录时间和位置</string>
    <string name="view_tasks">查看任务</string>
    <string name="grab_task">去抢单</string>

    <!--menu title-->
    <string name="my_task">我的任务</string>
    <string name="driving_record">行车记录</string>
    <string name="historical_order">历史订单</string>
    <string name="view_colleague_pos">查看同事位置</string>
    <string name="setting">设置</string>
    <string name="batch_scanning_pickup">批量扫描取件</string>

    <!--首页-->
    <string name="task_list">任务列表</string>
    <string name="grab_list">抢单列表</string>
    <string name="all">全部</string>
    <string name="can_grab_task">可抢订单</string>
    <string name="material_distribution">物料配送</string>
    <string name="drug_transit">药品中转</string>
    <string name="drug_delivery">药品配送</string>

    <!-- 设置 -->
    <string name="update_cover">修改头像</string>
    <string name="modify_pwd">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="old_pwd">输入旧密码</string>
    <string name="new_pwd">输入新密码</string>
    <string name="new_pwd_once">再一次输入新密码</string>
    <string name="done">完成</string>
    <string name="take_photo">用手机拍照</string>
    <string name="pick_from_album">从手机相册选择</string>
    <string name="cancel">取消</string>

    <!-- 相册和图片查看 -->
    <string name="all_photo">所有图片</string>
    <string name="photo_album">相册</string>
    <string name="preview">预览</string>
    <string name="max_select">最多只能选择%d张</string>
    <string name="preview_count">预览(%d)</string>
    <string name="complete_count">完成(%d/%d)</string>
    <string name="crop_photo">裁剪图片</string>
    <string name="photo_title_count">%d/%d</string>

    <!--我的任务-->
    <string name="prior_task">优先件</string>
    <string name="wait_task">待取件</string>
    <string name="dispatching_task">配送中</string>
    <string name="exceptional_task">异常件</string>
    <string name="completed_task">已完成</string>
    <string name="cancel_task">已取消</string>
    <string name="detail">详情</string>
    <string name="drug_delivery_time">出药时间</string>
    <string name="scan_piece">扫描取件</string>
    <string name="manual_piece">手动取件</string>
    <string name="view_end">查看终点</string>
    <string name="confirm_receipt">确认签收</string>
    <string name="confirm_delivery">确认送达</string>
    <string name="second_dispatch">二次配送</string>
    <string name="tripartite_dispatch">第三方配送</string>
    <string name="return_transfer_center">退回调拨中心</string>
    <string name="receipt_update">签收更正</string>
    <string name="grabing_task">抢单</string>

    <!-- 行车记录 -->
    <string name="drive_record">行车记录</string>
    <string name="drive_record_date">日期</string>
    <string name="mileage">里程</string>
    <string name="oil_cost">油耗</string>
    <string name="pwd_input_once">新密码两次输入不一致，请重新输入</string>
    <string name="scan_hint">将运单号放入条形框内，即可自动扫描</string>
    <string name="scan_pick_up">扫描取件</string>

    <!-- 扫描取件 -->
    <string name="post">提交</string>
    <string name="fail_pickup">取件失败</string>
    <string name="scan_result_info">对不起，这不是你的任务，请重新扫描。</string>
    <string name="ensure">确定</string>

    <!-- 申报异常 -->
    <string name="exception_for_sure">确认退回调拨中心?</string>
    <string name="exception_type">异常种类</string>
    <string name="exception_else_reason">请在异常说明里填写申报原因</string>
    <string name="post_exception_certificate">上传异常凭证</string>
    <string name="exception_desc">异常说明</string>
    <string name="exception_apply">异常申报</string>
    <string name="add_express_code">添加快递单号</string>
    <string name="pickup_manual_item_hint">输入快递单号</string>
    <string name="receipt_certificate">签收凭证</string>
    <string name="receipt_note">签收备注</string>
    <string name="receipt_hint">请输入签收备注，不超过30个字</string>
    <string name="exception_reason">申报原因</string>

    <!-- 历史订单 -->
    <string name="history_task">历史订单</string>

    <!-- 二次配送 -->
    <string name="second_dispatch_for_sure">确认进行二次配送?</string>
    <string name="express_brand">快递品牌</string>
    <string name="express_num">快递单号</string>
    <string name="tripartite_dispatch_note">三方配送备注</string>
    <string name="tripartite_dispatch_info">三方配送信息</string>
    <string name="post_order_certificate">上传下单凭证</string>
    <string name="order_certificate">下单凭证</string>
    <string name="select_express_brand">请选择快递品牌</string>
    <string name="select_express_num">请选择快递单号</string>
    <string name="note_limit">50字</string>

    <!-- 订单详情 -->
    <string name="package_detail">包裹详情</string>
    <string name="note">备注</string>
    <string name="deadline_delivery">截止送达时间</string>
    <string name="transfer_center_phone">调拨中心电话</string>
    <string name="service_time">服务电话</string>
    <string name="contact_to_transfer_center">联系调拨中心</string>

    <!-- 抢单相关 -->
    <string name="ensure_grab_task">确认抢单</string>
    <string name="cancel_grab_task">考虑一下</string>

    <!-- 使用别的地图打开 -->
    <string name="baidu_map">百度地图</string>
    <string name="gaode_map">高德地图</string>
    <string name="tencent_map">腾讯地图</string>

    <!-- 查看同事位置页面 -->
    <string name="courier">快递员</string>
    <string name="driver">司机</string>
    <string name="all_colleague">所有同事</string>
    <string name="get_location_info">获取位置信息中…</string>
    <string name="first">优先</string>
    <string name="off_work_punch_time">下班打卡时间</string>
    <string name="off_punch">下班打卡</string>
    <string name="exception_certificate">异常凭证</string>
    <string name="version_express">司机端</string>
    <string name="delete_the_photo">要删除这张图片吗？</string>
    <string name="delete">删除</string>
</resources>
