<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/all_colleague"
            android:textSize="@dimen/dimen_14sp"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="#EEEEEE"
            app:layout_constraintTop_toBottomOf="@id/all"/>

        <TextView
            android:id="@+id/driver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/driver"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintTop_toBottomOf="@id/divider"/>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="#EEEEEE"
            app:layout_constraintTop_toBottomOf="@id/driver"/>

        <TextView
            android:id="@+id/courier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/courier"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintTop_toBottomOf="@id/divider1"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_10dp"
            android:background="#EEEEEE"
            app:layout_constraintTop_toBottomOf="@id/courier"/>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/cancel"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintTop_toBottomOf="@id/divider2"/>
    </android.support.constraint.ConstraintLayout>
</layout>
