<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/map_baidu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/baidu_map"
            android:textSize="@dimen/dimen_18sp"/>

        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1px"
            android:background="#EEEEEE"
            app:layout_constraintTop_toBottomOf="@id/map_baidu"/>

        <TextView
            android:id="@+id/map_gaode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/gaode_map"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintTop_toBottomOf="@id/divider_1"/>

        <View
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1px"
            android:background="#EEEEEE"
            app:layout_constraintTop_toBottomOf="@id/map_gaode"/>


        <TextView
            android:id="@+id/map_tencent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/tencent_map"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintTop_toBottomOf="@id/divider_2"/>

        <View
            android:id="@+id/divider_3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_10dp"
            android:background="#EEEEEE"
            app:layout_constraintTop_toBottomOf="@id/map_tencent"/>


        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/cancel"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintTop_toBottomOf="@id/divider_3"/>

    </android.support.constraint.ConstraintLayout>
</layout>
