<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:src="@mipmap/icon_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@string/version_express"
            android:textColor="#999999"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/logo"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toTopOf="@id/logo"/>

        <com.changsukuaidi.www.widget.edittext.DeleteEditText
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="9dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingTop="9dp"
            android:text="haomini"
            android:textColor="#333333"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/logo"/>

        <com.changsukuaidi.www.widget.edittext.DeleteEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingBottom="9dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingTop="9dp"
            android:text="123456"
            android:textColor="#CCCCCC"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/phone_text"/>

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_background"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/password_text"/>

        <TextView
            android:id="@+id/forget_pwd_text"
            android:layout_width="57dp"
            android:layout_height="23dp"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="#999999"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/login_btn"
            app:layout_constraintTop_toBottomOf="@id/login_btn"/>

    </android.support.constraint.ConstraintLayout>
</layout>
