<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <com.changsukuaidi.www.widget.edittext.DeleteEditText
            android:id="@+id/det_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dimen_15dp"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/old_pwd"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingBottom="9dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingTop="9dp"
            android:textColor="#CCCCCC"
            android:textColorHint="#CCCCCC"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.changsukuaidi.www.widget.edittext.DeleteEditText
            android:id="@+id/det_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dimen_15dp"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/new_pwd"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingBottom="9dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingTop="9dp"
            android:textColor="#CCCCCC"
            android:textColorHint="#CCCCCC"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintTop_toBottomOf="@id/det_old_pwd"/>

        <com.changsukuaidi.www.widget.edittext.DeleteEditText
            android:id="@+id/det_new_pwd_once"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dimen_15dp"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/new_pwd_once"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingBottom="9dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingTop="9dp"
            android:textColor="#CCCCCC"
            android:textColorHint="#CCCCCC"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintTop_toBottomOf="@id/det_new_pwd"/>

        <TextView
            android:id="@+id/error_pwd_hit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@mipmap/ico_hint_center"
            android:drawablePadding="@dimen/dimen_7dp"
            android:text="@string/pwd_input_once"
            android:textColor="#E9442E"
            android:textSize="@dimen/dimen_12sp"
            app:layout_constraintTop_toBottomOf="@id/det_new_pwd_once"/>

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_15dp"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/login_btn_background"
            android:enabled="false"
            android:textSize="@dimen/dimen_16sp"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_12dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:text="@string/done"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/error_pwd_hit"/>
    </android.support.constraint.ConstraintLayout>
</layout>
