<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.changsukuaidi.www.widget.edittext.DeleteEditText
            android:id="@+id/phone_text_forget_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="9dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingTop="9dp"
            android:textColor="#333333"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/verify_code_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edit_text_background"
            android:orientation="horizontal">

            <com.changsukuaidi.www.widget.edittext.DeleteEditText
                android:id="@+id/verify_code_forget_pwd"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/verify_code"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:textColor="#333333"
                android:textColorHint="#CCCCCC"
                android:textSize="14sp"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="#EDEDED"/>

            <TextView
                android:id="@+id/get_verify_code_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:text="@string/get_verify_code"
                android:textColor="#666666"
                android:textSize="14sp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/next_btn_forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_background"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>

    </LinearLayout>
</layout>
