<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.changsukuaidi.www.widget.edittext.DeleteEditText
            android:id="@+id/password_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingBottom="9dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingTop="9dp"
            android:textColor="#333333"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp"/>

        <com.changsukuaidi.www.widget.edittext.DeleteEditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edit_text_background"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingBottom="9dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingTop="9dp"
            android:textColor="#333333"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_background"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:textSize="16sp"/>
    </LinearLayout>
</layout>
