<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_10dp">

            <TextView
                android:id="@+id/tv_receipt_certificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_20dp"
                android:text="@string/receipt_certificate"
                android:textColor="#333333"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintTop_toTopOf="parent"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_certificate_imgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:paddingBottom="12.5dp"
                android:paddingEnd="7.5dp"
                android:paddingStart="7.5dp"
                android:paddingTop="7.5dp"
                app:layout_constraintTop_toBottomOf="@id/tv_receipt_certificate"/>


            <TextView
                android:id="@+id/tv_receipt_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="#FFFFFF"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_20dp"
                android:text="@string/receipt_note"
                android:textColor="#333333"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintTop_toBottomOf="@id/rv_certificate_imgs"/>

            <EditText
                android:id="@+id/et_receipt_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:gravity="top"
                android:hint="@string/receipt_hint"
                android:maxLength="30"
                android:minHeight="@dimen/dimen_110dp"
                android:paddingBottom="@dimen/dimen_20dp"
                android:paddingEnd="@dimen/dimen_15dp"
                android:paddingStart="@dimen/dimen_15dp"
                android:paddingTop="@dimen/dimen_20dp"
                android:textSize="@dimen/dimen_13sp"
                app:layout_constraintTop_toBottomOf="@id/tv_receipt_note"/>

            <TextView
                android:id="@+id/confirm_receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_35dp"
                android:layout_marginStart="@dimen/dimen_35dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:background="@drawable/scan_result_ok_btn_bg"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:text="@string/confirm_receipt"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintTop_toBottomOf="@id/et_receipt_note"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_20dp"
                app:layout_constraintTop_toBottomOf="@id/confirm_receipt"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
